--- a/CSS/index.css
+++ b/CSS/index.css
@@ -55,7 +55,7 @@
     color: var(--very-dark-cyan);
   }
   .hero-section {
-    background-image: url(/Huddle-landing-page/IMAGES/bg-hero-mobile.svg);
+    background-image: url(/IMAGES/bg-hero-mobile.svg);
     margin-top: 70px;
     padding: 26px 18px;
     height: auto;
@@ -219,7 +219,7 @@
     cursor: pointer;
   }
   .hero-section {
-    background-image: url(/Huddle-landing-page/IMAGES/bg-hero-desktop.svg);
+    background-image: url(/IMAGES/bg-hero-desktop.svg);
     margin-top: 70px;
     background-repeat: no-repeat;
     background-size: cover;
