--- a/CSS/index.css
+++ b/CSS/index.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
 }
 :root {
   --pink: #ff52bf;
@@ -186,6 +187,65 @@
     position: relative;
     z-index: 1;
   }
+  .footer-container {
+    display: flex;
+    align-items: center;
+    gap: 6rem;
+  }
+  .footer-logo img {
+    height: 30px;
+    margin-bottom: 22px;
+  }
+  .social-media-icon,
+  .footer-links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+  .information {
+    display: flex;
+    align-items: center;
+    gap: 9px;
+  }
+
+  .footer-links {
+    gap: 7rem;
+  }
+  .links li {
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'open sans';
+  }
+  .information p {
+    font-size: 16px;
+    font-family: 'open sans';
+    font-weight: 400;
+  }
+  .information img {
+    height: 25px;
+  }
+  .footer-info,
+  .footer-links,
+  .social-media-icon {
+    flex: 1;
+    /* border: 2px solid red; */
+  }
+  .social-media-icon img {
+    border: 2px solid white;
+    height: 40px;
+    width: 40px;
+    padding: 5px 8px;
+    border-radius: 50px;
+  }
+  .footer-copy {
+    position: absolute;
+    right: 40px;
+    bottom: 30px;
+    font-size: 14px;
+    font-family: 'open sans';
+  }
 }
 /* destop view */
 @media screen and (min-width: 650px) {
@@ -358,9 +418,68 @@
 
   .footer {
     background-color: var(--very-dark-cyan);
-    padding: 80px 20px 40px;
+    padding: 110px 60px 40px;
     color: var(--white);
     position: relative;
     z-index: 1;
+  }
+  .footer-container {
+    display: flex;
+    align-items: center;
+    gap: 6rem;
+  }
+  .footer-logo img {
+    height: 30px;
+    margin-bottom: 22px;
+  }
+  .social-media-icon,
+  .footer-links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+  .information {
+    display: flex;
+    align-items: center;
+    gap: 9px;
+  }
+
+  .footer-links {
+    gap: 7rem;
+  }
+  .links li {
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'open sans';
+  }
+  .information p {
+    font-size: 16px;
+    font-family: 'open sans';
+    font-weight: 400;
+  }
+  .information img {
+    height: 25px;
+  }
+  .footer-info,
+  .footer-links,
+  .social-media-icon {
+    flex: 1;
+    /* border: 2px solid red; */
+  }
+  .social-media-icon img {
+    border: 2px solid white;
+    height: 40px;
+    width: 40px;
+    padding: 5px 8px;
+    border-radius: 50px;
+  }
+  .footer-copy {
+    position: absolute;
+    right: 40px;
+    bottom: 30px;
+    font-size: 14px;
+    font-family: 'open sans';
   }
 }
